- **New**: Added a method to `CPTBarPlot` that computes a plot range that encloses all of the bars, including the bar width and bar offset.
- **New**: Added bindings for plot data labels, bar plot fills and borders, and pie chart fills and radial offsets.
- **New**: Added bindings and data source methods for all line styles and fills in range and trading range plots.
- **Changed**: Changed the superclass of `CPTTextLayer` from `CPTLayer` to `CPTBorderedLayer`.
- **Changed**: Changed all iOS header files to "Project" visibility to prevent problems with archiving an app that uses the Core Plot static library.



# Release 1.0 (February 20, 2012)

## Release Notes

This release contains changes that will break apps built against earlier Core Plot versions. `CPTPlotRange` has been split into mutable and immutable variants similar to `CPTLineStyle` and `CPTTextStyle`. This change will break existing code that changes plot ranges; that code should be updated to use the mutable versions. The `CPTBarPlotField` enum was changed so that the field values start at zero like all other plots. This will affect any existing code that used hard-coded values for the fields instead of the enum field names (`CPTBarPlotFieldBarLocation`, etc.). The `CPTNewCGColorFromNSColor()` function was renamed to `CPTCreateCGColorFromNSColor()` to conform to Apple's memory management naming conventions.

Core Plot now supports projects that use automatic reference counting (ARC). For compatibility with older systems, Core Plot itself does not use ARC but its header files and binaries can be used in applications that do.

## Details
- **New**: Added a script to automatically format the code following the coding standards using uncrustify.
- **New**: Added support for automatic reference counting (ARC).
- **New**: Added the HTML docs built with Doxygen to the source code repository so that they can be viewed online with a web browser.