@@ -44,18 +44,38 @@ CPTBarPlotField;
 ///	@name Bar Style
 /// @{
 
+/**	@brief (Optional) Gets an array of bar fills for the given bar plot.
+ *	@param barPlot The bar plot.
+ *	@param indexRange The range of the data indexes of interest.
+ *	@return An array of bar fills.
+ **/
+-(NSArray *)barFillsForBarPlot:(CPTBarPlot *)barPlot recordIndexRange:(NSRange)indexRange;
+
 /**	@brief (Optional) Gets a bar fill for the given bar plot.
+ *	This method will not be called if
+ *	@link CPTBarPlotDataSource::barFillsForBarPlot:recordIndexRange: -barFillsForBarPlot:recordIndexRange: @endlink
+ *	is also implemented in the datasource.
  *	@param barPlot The bar plot.
  *	@param index The data index of interest.
- *	@return The bar fill for the bar with the given index. If the data source returns nil, the default fill is used.
+ *	@return The bar fill for the bar with the given index. If the data source returns <code>nil</code>, the default fill is used.
  *	If the data source returns an NSNull object, no fill is drawn.
  **/
 -(CPTFill *)barFillForBarPlot:(CPTBarPlot *)barPlot recordIndex:(NSUInteger)index;
 
+/**	@brief (Optional) Gets an array of bar line styles for the given bar plot.
+ *	@param barPlot The bar plot.
+ *	@param indexRange The range of the data indexes of interest.
+ *	@return An array of line styles.
+ **/
+-(NSArray *)barLineStylesForBarPlot:(CPTBarPlot *)barPlot recordIndexRange:(NSRange)indexRange;
+
 /**	@brief (Optional) Gets a bar line style for the given bar plot.
+ *	This method will not be called if
+ *	@link CPTBarPlotDataSource::barLineStylesForBarPlot:recordIndexRange: -barLineStylesForBarPlot:recordIndexRange: @endlink
+ *	is also implemented in the datasource.
  *	@param barPlot The bar plot.
  *	@param index The data index of interest.
- *	@return The bar line style for the bar with the given index. If the data source returns nil, the default line style is used.
+ *	@return The bar line style for the bar with the given index. If the data source returns <code>nil</code>, the default line style is used.
  *	If the data source returns an NSNull object, no line is drawn.
  **/
 -(CPTLineStyle *)barLineStyleForBarPlot:(CPTBarPlot *)barPlot recordIndex:(NSUInteger)index;
