@@ -41,7 +41,17 @@ CPTRangePlotField;
 ///	@name Bar Style
 /// @{
 
+/**	@brief (Optional) Gets a range of bar line styles for the given range plot.
+ *	@param plot The range plot.
+ *	@param indexRange The range of the data indexes of interest.
+ *	@return An array of line styles.
+ **/
+-(NSArray *)barLineStylesForRangePlot:(CPTRangePlot *)plot recordIndexRange:(NSRange)indexRange;
+
 /**	@brief (Optional) Gets a bar line style for the given range plot.
+ *	This method will not be called if
+ *	@link CPTRangePlotDataSource::barLineStylesForRangePlot:recordIndexRange: -barLineStylesForRangePlot:recordIndexRange: @endlink
+ *	is also implemented in the datasource.
  *	@param plot The range plot.
  *	@param index The data index of interest.
  *	@return The bar line style for the bar with the given index. If the data source returns <code>nil</code>, the default line style is used.
